# cpp-project-template

./: CMakeLists.txt  CMakeLists.txt.in
test/: test.cpp
